# PolicyParser-Trae

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
.trae/specs/test_plan/: checklist.md  spec.md  tasks.md
app/: main.py  utils.py
app/api/: dependencies.py  router.py
app/api/routes/: chat.py  classification.py  health.py
app/core/: config.py  database.py  logger.py  middleware.py
app/models/: policy.py
app/models/entities/: __init__.py  policy_entity.py
app/repositories/: __init__.py  policy_repository.py
app/schemas/: __init__.py  requests.py  responses.py
app/services/: workflow_runner.py
app/workflow/: graph.py  state.py
app/workflow/agents/: classification_agent.py  interpret_agent.py
app/workflow/prompts/: __init__.py  classification.md.j2  interpretation.md.j2  policy_qa.md.j2
tests/: api.py  conftest.py  prompt.py  test_api.py  test_classification_model.py  test_config.py  test_database.py  test_html_parser.py  test_prompt.py  test_repository.py  test_workflow_runner.py  utils.py
tests/policies/: policy10_content.txt  policy1_source.txt  policy2_source.txt  policy3_source.txt  policy4_source.txt  policy5_content.txt  policy6_content.txt  policy7_content.txt  policy8_content.txt  policy9_content.txt
